--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
 actix-web = "4.3.1"
 tokio = { version = "1.26.0", features = ["full"] }
+dotenv = "0.15.0"
