--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
 actix-web = "4.3.1"
 tokio = { version = "1.26.0", features = ["full"] }
 dotenv = "0.15.0"
+serde = { version = "1.0.158", features = ["derive"] }
+serde_json = "1.0.94"
