--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
 actix-web = "4.3.1"
 tokio = { version = "1.26.0", features = ["full"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
+dotenvy_macro = "0.15.1"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
