--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ dotenvy = "0.15.6"
 dotenvy_macro = "0.15.1"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
+thiserror = "1.0.40"
