--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ dotenvy_macro = "0.15.1"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
 thiserror = "1.0.40"
+log = "0.4.17"
+env_logger = "0.10.0"
