--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
 actix-web = "4.3.1"
 tokio = { version = "1.26.0", features = ["full"] }
 dotenvy = "0.15.6"
@@ -16,3 +16,4 @@ serde_json = "1.0.94"
 thiserror = "1.0.40"
 log = "0.4.17"
 env_logger = "0.10.0"
+chrono = { version = "0.4.24", features = ["serde"] }
