Create docker image

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[registries.crates-io]
+protocol = "sparse"
 
 [dependencies]
 sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
